--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -28,7 +28,7 @@
         <span class="badge bg-info p-2" {% if item.category.description %}title="{{ item.category.description }}"{% endif %}>
           <i class="fas fa-tag"></i> {{ item.category.name }}
         </span>
-      </div>
+            </div>
       <!-- Auction Status -->
       <div class="mb-4">
         <h5>Auction Status</h5>
@@ -36,40 +36,43 @@
           <span class="badge {% if item.locked %}bg-danger{% else %}bg-success{% endif %} p-2">
             {{ "Locked" if item.locked else "Open" }}
           </span>
-          {% if is_allowed %}
-          <a href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}"
-            title="View authentication request"
-            class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning
-            {% elif item.authentication_requests[0].status == 2 %}bg-success
-            {% else %}bg-danger{% endif %} p-2"
-          >
-            {% if item.authentication_requests[0].status == 1 %}
-              Authentication Pending
-            {% elif item.authentication_requests[0].status == 2 %}
-              Authenticated
-            {% else %}
-              Authentication Declined
-            {% endif %}
-          </a>
-          {% else %}
-          <span class="badge {% if authentication == 1 %}bg-warning
-            {% elif item.authentication == 2 %}bg-success
-            {% elif authentication == 3 %}bg-danger
-            {% else %}bg-secondary{% endif %} p-2"
-          >
-            {% if authentication == 1 %}
-              Authentication Pending
-            {% elif authentication == 2 %}
-              Authenticated
-            {% elif authentication == 3 %}
-              Authentication Declined
-            {% else %}
-              Not Authenticated
+          <span class="badge bg-secondary p-2">
+            {% if item.status == 1 %}
+              Open
+            {% elif item.status == 2 %}
+              Won
+            {% elif item.status == 3 %}
+              Paid
             {% endif %}
           </span>
+          {% if is_allowed %}
+            <a href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}"
+              title="View authentication request"
+              class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning{% elif item.authentication_requests[0].status == 2 %}bg-success{% else %}bg-danger{% endif %} p-2">
+              {% if item.authentication_requests[0].status == 1 %}
+                Authentication Pending
+              {% elif item.authentication_requests[0].status == 2 %}
+                Authenticated
+              {% else %}
+                Authentication Declined
+              {% endif %}
+            </a>
+          {% else %}
+            <span class="badge {% if authentication == 1 %}bg-warning{% elif authentication == 2 %}bg-success{% elif authentication == 3 %}bg-danger{% else %}bg-secondary{% endif %} p-2">
+              {% if authentication == 1 %}
+                Authentication Pending
+              {% elif authentication == 2 %}
+                Authenticated
+              {% elif authentication == 3 %}
+                Authentication Declined
+              {% else %}
+                Not Authenticated
+              {% endif %}
+            </span>
           {% endif %}
         </div>
       </div>
+
       <!-- Price -->
       <div class="mb-4" id="price-section">
         {% if item.highest_bid() %}
