--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -17,7 +17,7 @@
   justify-content: center;
   text-align: center;
   background-color: #f7f7f7;
-  aspect-ratio: 4 / 3; /* Set aspect ratio to maintain consistent image proportions */
+  aspect-ratio: 4 / 3; /* Set aspect ratio to maintain consistent image proportions and avoid cutoff */
 }
 
 .auction-image { 
