--- a/main/page_home/templates/home.html
+++ b/main/page_home/templates/home.html
@@ -43,9 +43,9 @@
         <a href="{{ url_for('item_page.index', url=item.url) }}" style="text-decoration: none; color: inherit; display: block; cursor: pointer;">
           <div class="auction-item">
             <div class="auction-image-container">
-              {% if item.image %}
+              {% if item.images %}
                 <img class="auction-image img-fluid"
-                     src="{{ item.image }}"
+                     src="{{ item.images[0].url }}"
                      alt="Image of {{ item.title }}"
                      loading="lazy"
                 >
