--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -21,7 +21,7 @@
   <!-- Notifications -->
   <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
 </head>
-<body class="brutalist-layout">
+<body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
