incase any changes

--- a/main/page_managers/templates/manager_expert_availability.html
+++ b/main/page_managers/templates/manager_expert_availability.html
@@ -117,7 +117,7 @@
 document.getElementById("categoryFilter").addEventListener("change", function() {
   let category = this.value;
   
-  fetch(`/filter-experts?category_id=${category}`)
+  fetch(`/manager/filter-experts?category_id=${category}`) 
     .then(response => response.json())
     .then(data => {
       let dailyTable = document.getElementById("dailyTable").querySelector("tbody");
