--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -194,18 +194,20 @@
       
       <!-- Item watchers -->
       <div class="mt-3 d-flex align-items-center">
-        {% if is_watching %}
-          <button id="unwatch-btn" class="btn btn-success" data-item-url="{{ item.url }}">
-            <i class="fas fa-check"></i> Watched
-          </button>
-        {% else %}
-          <button id="watch-btn" class="btn btn-outline-primary" data-item-url="{{ item.url }}">
-            <i class="fas fa-eye"></i> Watch
-          </button>
+        {% if not is_auction_over %}
+          {% if is_watching %}
+            <button id="unwatch-btn" class="btn btn-success" data-item-url="{{ item.url }}">
+              <i class="fas fa-check"></i> Watched
+            </button>
+          {% else %}
+            <button id="watch-btn" class="btn btn-outline-primary" data-item-url="{{ item.url }}">
+              <i class="fas fa-eye"></i> Watch
+            </button>
+          {% endif %}
+          <span id="watch-counter" class="ms-2 badge bg-secondary">
+            <i class="fas fa-user-friends"></i> {{ item.watcher_count() }} {% if item.watcher_count() == 1 %}watcher{% else %}watchers{% endif %}
+          </span>
         {% endif %}
-        <span id="watch-counter" class="ms-2 badge bg-secondary">
-          <i class="fas fa-user-friends"></i> {{ item.watcher_count() }} {% if item.watcher_count() == 1 %}watcher{% else %}watchers{% endif %}
-        </span>
       </div>
       <!-- Auction end date -->
       <div class="mt-3">
